tests/error/empty_string.gw
// [contains ] assigning to empty string
"test" => string @s;
